--- a/src/main/resources/templates/v1/home/home.html
+++ b/src/main/resources/templates/v1/home/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Coffee _ Home</title>
   <meta charset="utf-8">
@@ -11,12 +11,7 @@
 <body>
 
 <!-- 헤더 위치 -->
-<div class="topnav">
-  <a href="/v1/home">Home</a>
-  <a href="/v1/menu">커피메뉴</a>
-  <a href="/v1/order">주문내역</a>
-  <a href="/v1/member">고객정보</a>
-</div>
+<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
 
 
 <div id="main" style="font-size:large; alignment: center; padding: 10px 50px ">
@@ -44,10 +39,7 @@
 
 
 <!-- 푸터 위치 -->
-<div class="footer">
-  <!--    https://www.w3schools.com/html/html_emojis.asp   -->
-  <h4>[Footer] <span style="font-size:30px;">&#9973;</span> Spring boot 항해 ~ with Me</h4>
-</div>
+<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
 
 </body>
 </html>
