--- a/src/main/resources/templates/v1/menu/menu.html
+++ b/src/main/resources/templates/v1/menu/menu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -13,12 +12,7 @@
 <body>
 
 <!-- 헤더 위치 -->
-<div class="topnav">
-  <a href="/v1/home">Home</a>
-  <a href="/v1/menu">커피메뉴</a>
-  <a href="/v1/order">주문내역</a>
-  <a href="/v1/member">고객정보</a>
-</div>
+<th:block th:replace="/v1/comm/header :: headerFragment"></th:block>
 
 
 <div id="main" style="font-size:large; text-align: center; ">
@@ -73,48 +67,12 @@
 
     <tbody id="t_body">
     <!--- 데이타 출력 부분 -->
-      <tr class="tr_td">
-        <td>Chk</td>
-        <th>커피No</th>
-        <td>메뉴명</td>
-        <td>종류</td>
-        <td>가격</td>
-        <td>등록일</td>
-        <td>수정일</td>
-        <td>수정</td>
-        <td>삭제</td>
-      </tr>
-
-      <tr class="tr_td">
-        <td>Chk</td>
-        <th>커피No</th>
-        <td>메뉴명</td>
-        <td>종류</td>
-        <td>가격</td>
-        <td>등록일</td>
-        <td>수정일</td>
-        <td>수정</td>
-        <td>삭제</td>
-      </tr>
-
-      <tr class="tr_td">
-        <td>Chk</td>
-        <th>커피No</th>
-        <td>메뉴명</td>
-        <td>종류</td>
-        <td>가격</td>
-        <td>등록일</td>
-        <td>수정일</td>
-        <td>수정</td>
-        <td>삭제</td>
-      </tr>
-
       <tr th:each="list : ${list}">
         <td>Chk</td>
         <!--<td th:text="${list.No}">커피No</td> -->
         <!-- 직접 쓰는거 보다는 map에서 꺼내오는것(list.get)이 더 좋은 방법 -->
-        <td th:text="${list.get('No')}">커피No</td>
-        <td th:text="${list.get('name')}">메뉴명</td>
+        <td th:text="${list.get('no')}">커피No</td>
+        <td th:text="${list.get('coffee')}">메뉴명</td>
         <td th:text="${list.get('kind')}">종류</td>
         <td th:text="${list.get('price')}">가격</td>
         <td th:text="${list.get('reg_day')}">등록일</td>
@@ -129,10 +87,7 @@
 </div>
 
 <!-- 푸터 위치 -->
-<div class="footer">
-  <!--    https://www.w3schools.com/html/html_emojis.asp   -->
-  <h4>[Footer] <span style="font-size:30px;">&#9973;</span> Spring boot 항해 ~ with Me</h4>
-</div>
+<th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
 
 </body>
 </html>
