--- a/src/main/resources/templates/v1/menu/menu.html
+++ b/src/main/resources/templates/v1/menu/menu.html
@@ -20,20 +20,20 @@
   <div id="search" style="height: 150px;padding: 15px; font-size: small; width: 90%; margin-left: auto;  margin-right: auto;">
     <h3>[ Coffee menu Management <span style="font-size:30px;">&#9749;</span> ] <th:block th:text="${hello}"> </th:block></h3>
 
-    <form name="fm_menu" autocomplete="on">
+    <form name="fm_menu" autocomplete="on" action="/v1/menu_search" method="post">
       <fieldset>
 
         <legend> [검색조건] </legend>
         <label>등록기간</label><input type="date" id="start_date" name="start_date" min="2020-01-01" max="2023-12-31">
         - <input type="date" id="end_date" name="end_date" min="2020-01-01" max="2023-12-31">
         &nbsp;&nbsp;
-        <label>메뉴명</label> <input type="text" id="name" name="name">
+        <label>메뉴명</label> <input type="text" id="coffee" name="coffee">
         &nbsp;&nbsp;
         <label>종류</label> <select id="kind" name="kind">
         <option value="ALL">전체</option>
-        <option value="1.커피">1.커피</option>
-        <option value="2.에이드">2.에이드</option>
-        <option value="3.스무디">3.스무디</option>
+        <option value="커피">커피</option>
+        <option value="논커피">논커피</option>
+        <option value="에이드">에이드</option>
       </select>
 
         &nbsp;&nbsp;<input type="submit" value="조회" style="width: 80px;height: 30px;font-weight: bold; font-size: medium">
@@ -89,6 +89,7 @@
 
 <!-- 푸터 위치 -->
 <th:block th:replace="/v1/comm/footer :: footerFragment"></th:block>
+
 
 </body>
 </html>
